# java-legion

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DaxbyExample.java  LegionHelloWorld.java  Makefile  README.md  runtime.cc
ci/: before_install.sh
native/: argument_map.cc  domain.cc  domain_coloring.cc  field_allocator.cc  field_space.cc  future.cc  future_map.cc  index_allocator.cc  index_launcher.cc  index_partition.cc  index_space.cc  inline_launcher.cc  logical_partition.cc  logical_region.cc  physical_region.cc  point.cc  portal.h  rect.cc  region_requirement.cc  runtime.cc  task.cc  task_launcher.cc
org/legion/: Future.java  Mapper.java  TaskFunction.java  TaskLauncher.java
src/main/java/org/legion/: ArgumentMap.java  CoherenceProperty.java  Context.java  Domain.java  DomainColoring.java  FieldAllocator.java  FieldSpace.java  FutureMap.java  IndexAllocator.java  IndexLauncher.java  IndexPartition.java  IndexSpace.java  InlineLauncher.java  LegionObject.java  LogicalPartition.java  LogicalRegion.java  NativeLibraryLoader.java  PhysicalRegion.java  Point.java  Pointer.java  PrivilegeMode.java  Rect.java  RegionRequirement.java  Runtime.java  Task.java  TaskFunction.java  TaskLauncher.java
src/main/java/org/legion/util/: Environment.java
